Created plot for tollerance c_t

--- a/KalmanNet_TSP-main/main_Robust_KNet.ipynb
+++ b/KalmanNet_TSP-main/main_Robust_KNet.ipynb
@@ -301,10 +301,10 @@
     "# Initialize dataframe for the test data\n",
     "if SELECTED_MODEL == 0:\n",
     "    # Synthetic NL Model\n",
-    "    test_data_synt = pd.DataFrame(columns=['MSE REKF','Computational Time REKF','MSE Robust KNet','Computational Time Robust KNet','MSE KalmanNet','Computational Time KalmanNet'])\n",
+    "    test_data_synt = pd.DataFrame(columns=['MSE REKF','Computational Time REKF [s]','MSE Robust KNet','Computational Time Robust KNet [s]','MSE KalmanNet','Computational Time KalmanNet [s]'])\n",
     "else:\n",
     "    # Discrete Time Lorentz Attractor\n",
-    "    test_data_synt = pd.DataFrame(columns=['MSE REKF','Computational Time REKF', 'MSE REKF-PARTIAL','Computational Time REKF-PARTIAL','MSE Robust KNet','Computational Time Robust KNet','MSE Robust KNet-PARTIAL','Computational Time Robust KNet-PARTIAL','MSE KalmanNet','Computational Time KalmanNet','MSE KalmanNet-PARTIAL','Computational Time KalmanNet-PARTIAL'])\n"
+    "    test_data_synt = pd.DataFrame(columns=['MSE REKF','Computational Time REKF [s]', 'MSE REKF-PARTIAL','Computational Time REKF-PARTIAL [s]','MSE Robust KNet','Computational Time Robust KNet [s]','MSE Robust KNet-PARTIAL','Computational Time Robust KNet-PARTIAL [s]','MSE KalmanNet','Computational Time KalmanNet [s]','MSE KalmanNet-PARTIAL','Computational Time KalmanNet-PARTIAL [s]'])\n"
    ],
    "outputs": [],
    "execution_count": null
@@ -612,7 +612,7 @@
     "# Plot tollerance c_t\n",
     "c_tFig = go.Figure()\n",
     "c_tFig.add_trace(go.Scatter(x=np.arange(len(c_t)), y=c_t, name=\"c_t\"))\n",
-    "c_tFig.update_layout(title=dict(text='Tollerance c_t', font=dict(size=20, color='black'), x=0.5, xanchor='center'), xaxis_title='Time (s)')\n",
+    "c_tFig.update_layout(title=dict(text='Tollerance c_t', font=dict(size=20), x=0.5, xanchor='center'), xaxis_title='Time (s)')\n",
     "\n",
     "c_tFig.show()"
    ],
@@ -670,6 +670,14 @@
    "execution_count": null
   },
   {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "test_input.size()",
+   "id": "4652a4f8afa4788c",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
    "cell_type": "code",
    "id": "b7e25df6-c152-4ed4-be16-3465c91468ed",
    "metadata": {},
@@ -721,7 +729,7 @@
     "    'STD': test_data_synt.std()\n",
     "})\n",
     "\n",
-    "print(stats)"
+    "print(stats.applymap(lambda x: f\"{x:.6f}\"))"
    ],
    "outputs": [],
    "execution_count": null
